# adventofcode

./: .gitignore  README.md
2021/haskell/day04/: Main.hs  day04.cabal
2021/haskell/day04/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2021/rust/: Cargo.toml
2022/: README.md
2022/day01/: main.exs
2022/day04/: main.exs
2022/day08/: main.py
2022/day12/: main.py
2022/day16/: part1.py  part2.py
2022/day17/: part1.py  part2.py
2022/day18/: .gitignore
2022/day19/: part1.py  part2.py
2022/day20/: part1.py  part2.py
2022/day21/: part1.py  part2.py
2022/day22/: part1.py  part2.py
2022/day23/: part1.py  part2.py
2022/day24/: part1.py  part2.py
2022/day25/: part1.py
2023/day01/: part1.py  part2.py
2023/day02/: part1.py  part2.py
2023/day03/: part1.py  part2.py
2023/day04/: part1.py  part2.py
2023/day05/: part1.py  part2.py
2023/day06/: part1.py  part2.py
2023/day07/: part1.py  part2.py
2023/day08/: part1.py  part2.py
2023/day09/: part1.py  part2.py
2023/day10/: part1.py  part2.py
2023/day11/: part1.py  part2.py
2023/day12/: part1.py  part2.py
2023/day13/: part1.py  part2.py
2023/day14/: part1.py  part2.py
2023/day15/: part1.py  part2.py
2023/day16/: part1.py  part2.py
2023/day17/: part1.py  part2.py
2023/day18/: part1.py  part2.py  sample2.txt
2023/day19/: part1.py  part2.py
2023/day20/: part1.py  part2.py
2023/day21/: part1.py  part2-bf.py  (+2 more)
aoc2021/haskell/day05/: Main.hs  Makefile  day05.cabal
aoc2021/haskell/day06/: day06.cabal
(+153 files in other folders)
