cabal-version:      2.4
name:               day04
version:            0.1.0.0
author:             Marco Yang
maintainer:         marcoyang123@gmail.com

executable day04
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, split ^>=0.2.3.4
    hs-source-dirs:   .
    default-language: Haskell2010
