cabal-version: 2.4
name:          day05
version:       0.1.0.0
maintainer:    marcoyang123@gmail.com
author:        Marco Yang

executable day05
    main-is:          Main.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    build-depends:
        array,
        base ^>=4.14.3.0,
        split ^>=0.2.3.4,
        unordered-containers ^>=0.2.18.0,
        hashable ^>=1.4.0.2
